Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
0.9.2
-
Visual Studio 2013 Update 5 RC
-
Patch Available
-
Patch
Description
Build fail of project lib\cpp\libthrift.vcxproj due to compile error
1>c:\...\thrift\lib\cpp\src\thrift\transport\tsslsocket.cpp(69): error C3861: 'pthread_self': identifier not found
The current Thrift code calls pthread_self() which is not available on Windows platform in current Thrift library dependency set.
Herein I propose resolution by using native WINAPI equivalent GetCurrentThreadId() in case source is compiled when _WIN32 macro is defined.