THRIFT-3206 Fix Visual Studio build failure due 'pthread_self': identifier not found

Patch:  Paweł Janicki